test/types/void/redefine-none.good
redefine-none.chpl:2: error: attempt to redefine reserved word 'none'
